# typed-signal-networks

./: .gitignore  AI_RESEARCH_UNIFY6-26-26.md  CONTROL_RERUN_FINDINGS.md  FINDINGS_SUMMARY.md  PAPER_DRAFT.md  README.md  UNITY_LOG.md  UNITY_NOTEBOOK.md  UNITY_PLANV1.md  pyproject.toml  requirements.txt
ai_unity/: __init__.py  complex_capsules.py  data.py  evaluate_affine_probes.py  evaluate_affnist.py  evaluate_complex_affines.py  evaluate_complex_rotations.py  run_complex.py  run_ternary.py  summarize_results.py  ternary_moe.py  text_data.py  text_lm.py  training.py  utils.py
complex-capsules/: HANDOVER.md  model.py  train.py
paper/: README.md  main.tex  references.bib
results/affnist_native40_controls_seed123_full_eval/: affnist_eval.json
results/affnist_native40_controls_seed2024_full_eval/: affnist_eval.json
results/affnist_native40_controls_seed321_full_eval/: affnist_eval.json
results/affnist_native40_controls_seed777_full_eval/: affnist_eval.json
results/affnist_native40_resnet_seed123_full_eval/: affnist_eval.json
results/affnist_native40_resnet_seed2024_full_eval/: affnist_eval.json
results/affnist_native40_resnet_seed321_full_eval/: affnist_eval.json
results/affnist_native40_resnet_seed777_full_eval/: affnist_eval.json
results/affnist_native40_seed123_full_eval/: affnist_eval.json
ternary-moe/: model.py  results.txt  train.py
tests/: test_models_smoke.py  test_text_lm_smoke.py  test_training_smoke.py
tmp/: aggregate_control_rerun.py  control_rerun_aggregate.json  run_control_rerun.sh
(+377 files in other folders)
